--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 .container {
